# 3d-packing-demo

./: .gitignore  PROJECT_PLAN.md  README.md  SEQUENTIAL_PACKING_PLAN.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
bin_packing/: __init__.py  exceptions.py  extreme_points.py  fitness.py  genetic.py  heuristic.py  io_postgres.py  models.py  occupancy.py  orientations.py  packer.py  sequential.py  visualisation.py  warehouse_algorithms.py  warehouse_compare.py  warehouse_io.py
data/: sample-warehouse-item-master.csv
examples/: basic_usage.py  compare_warehouse.py  dashboard.py
scripts/: benchmark_sequential.py  run_pack_from_sql.py
tests/: conftest.py  test_compare_warehouse_cli.py  test_extreme_points.py  test_genetic.py  test_heuristic.py  test_io_postgres.py  test_occupancy.py  test_orientations.py  test_packer.py  test_run_pack_from_sql.py  test_sequential.py  test_warehouse_algorithms.py  test_warehouse_compare.py  test_warehouse_io.py
