[project]
name = "3d-bin-packing"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.8",
    "plotly>=5.0",
]
postgres = [
    "psycopg[binary]>=3.1",
]
rl = [
    "torch>=2.0",
    "gymnasium>=0.29",
]
dashboard = [
    "streamlit>=1.35",
    "plotly>=5.0",
    "pandas>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "hypothesis>=6.100",
]

[tool.setuptools.packages.find]
include = ["bin_packing*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
